fixed Author spacing in Block3

--- a/components/Blocks/Block2.module.scss
+++ b/components/Blocks/Block2.module.scss
@@ -8,7 +8,7 @@
   height: 100vh;
   position: sticky;
   top: 0;
-  z-index: -1;
+  z-index: 0;
 
   display: flex;
   justify-content: center;
