--- a/components/Blocks/Block3.module.scss
+++ b/components/Blocks/Block3.module.scss
@@ -28,7 +28,7 @@
   }
 
   p {
-    margin: 0.5em 0;
+    margin: 0.01em 0;
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 1.75rem;
